# wioi-duplicate-finder

./: .gitignore  README.md  package-lock.json  package.json  prep_release_db.py  release.py
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: reference.db
src-tauri/src/: db.rs  lib.rs  parser.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/parsers/: mod.rs
src-tauri/src/repositories/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/target-antigravity/: .rustc_info.json
src-tauri/target-antigravity/debug/.fingerprint/RHOIO_Herbarium_Duplicate_Finder-275db43e9559e2d6/: dep-lib-tauri_app_lib  lib-tauri_app_lib  lib-tauri_app_lib.json
src-tauri/target-antigravity/debug/.fingerprint/RHOIO_Herbarium_Duplicate_Finder-3ec0f072a87ed957/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-antigravity/debug/.fingerprint/RHOIO_Herbarium_Duplicate_Finder-9c8f3dd0e722f7d2/: build-script-build-script-build  build-script-build-script-build.json
src-tauri/target-antigravity/debug/.fingerprint/RHOIO_Herbarium_Duplicate_Finder-be08763d29db40d5/: bin-RHOIO_Herbarium_Duplicate_Finder  bin-RHOIO_Herbarium_Duplicate_Finder.json
src-tauri/target-antigravity/debug/.fingerprint/adler2-708dea00d6a216f0/: lib-adler2  lib-adler2.json
src-tauri/target-antigravity/debug/.fingerprint/ahash-1f91ace4ea87f7d9/: build-script-build-script-build  build-script-build-script-build.json
(+1142 files in other folders)
