[package]
name = "RHOIO_Herbarium_Duplicate_Finder"
version = "0.7.0"
description = "Find and reuse duplicate herbarium specimen data fast"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
regex = "1.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rfd = "0.15"
chrono = "0.4"
time = "=0.3.47"
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"


